SessionService pro prihlasovani

--- a/app/assets/javascripts/app.js.erb
+++ b/app/assets/javascripts/app.js.erb
@@ -1,3 +1,4 @@
 //= require app/modules
-//= require app/controllers/sessions
+//= require_tree ./app/services/
+//= require_tree ./app/controllers/
 
