--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
-    <div ng-view></div>
+    <div ng-view>
+      Loading...
+    </div>
   </body>
 </html>
